--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 tmp/
+selenium/*
 **tmp**
 *.code-workspace
 .*.code-workspace
@@ -8,3 +9,6 @@ tmp/
 __pycache__/
 .ipynb_checkpoints/
 db.sqlite3
+**/migrations/[0-9]*.py
+# virtual env
+pipenv/
