--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,8 @@ services:
   db:
     image: postgres:latest
     networks: ["web"]
-    
-    environment:
-      - POSTGRES_USER=noobi
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=blog
+    env_file:
+      - ./.env.dev
   
   web:
     build: .
