--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env.dev
   
-  web:
+  backend:
     build: .
     networks: ["web"]
     command: python3 manage.py runserver 0.0.0.0:8000
