--- a/webapp/.dockerignore
+++ b/webapp/.dockerignore
@@ -10,7 +10,8 @@ selenium/*
 .vscode/
 **/__pycache__/
 .ipynb_checkpoints/
-db.sqlite3
+*.sqlite3
 **/migrations/[0-9]*.py
+*.md
 # virtual env
 .pipenv/
