image url or random image

--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -8,3 +8,11 @@ django-widget-tweaks
 sorl-thumbnail
 django-taggit
 bleach
+requests
+asyncio
+aiohttp
+gunicorn
+
+boto3
+django-storages
+python-magic
