--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -13,4 +13,5 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
 EXPOSE 8000/tcp
+ENV RUN_PORT=8000
 ENTRYPOINT [ "/blogproject/entrypoint.dev.sh" ]
