--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     image: blogpost_backend
     environment:
       - STAGE=TESTING
+      - RUN_PORT=8000
     networks: ["blogpost_web"]
-    command: python3 manage.py runserver 0.0.0.0:8000
     depends_on:
       - db
     ports:
